fixed kokoa image

--- a/friends.html
+++ b/friends.html
@@ -61,7 +61,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/Kokoa.PNG"
+              src="img/Kokoa.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
