--- a/chats.html
+++ b/chats.html
@@ -40,7 +40,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/kokoa.PNG"
+              src="img/kokoa.jpg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
