--- a/find.html
+++ b/find.html
@@ -93,7 +93,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="img/twice.JPG" />
+              <img src="img/twice.jpg" />
               <div class="open-post__heart-count">
                 <i class="fa-solid fa-heart fa-xs"></i><span>215</span>
               </div>
